--- a/index.html
+++ b/index.html
@@ -101,7 +101,15 @@
       <div class="flex flex-col sm:flex-row sm:items-start gap-2 
                   border-b border-white/40 pb-6 mb-6">
         <dt class="font-bold shrink-0 w-36">アクセス</dt>
-        <dd>- JR山手線 [新橋駅](https://www.instabase.jp/tokyo-s1130102-event-hall) 徒歩7分/ 東京メトロ銀座線 [新橋駅](https://www.instabase.jp/tokyo-s1130102-event-hall) 徒歩7分/JR京浜東北線 [新橋駅](https://www.instabase.jp/tokyo-s1130102-event-hall) 徒歩7分/都営浅草線 [新橋駅](https://www.instabase.jp/tokyo-s1130102-event-hall) 徒歩7分/東京メトロ銀座線 [銀座駅](https://www.instabase.jp/tokyo-s2800111-event-hall) 徒歩5分/東京メトロ丸ノ内線 [銀座駅](https://www.instabase.jp/tokyo-s2800111-event-hall) 徒歩5分/東京メトロ日比谷線 [銀座駅](https://www.instabase.jp/tokyo-s2800111-event-hall) 徒歩5分/東京メトロ日比谷線 [東銀座駅](https://www.instabase.jp/tokyo-s2800313-event-hall) 徒歩5分/都営浅草線 [東銀座駅](https://www.instabase.jp/tokyo-s2800313-event-hall) 徒歩5分</dd>
+        <dd>JR山手線 [新橋駅] 徒歩7分
+          / 東京メトロ銀座線 [新橋駅] 徒歩7分
+          /JR京浜東北線 [新橋駅] 徒歩7分
+          /都営浅草線 [新橋駅] 徒歩7分
+          /東京メトロ銀座線 [銀座駅] 徒歩5分
+          /東京メトロ丸ノ内線 [銀座駅] 徒歩5分
+          /東京メトロ日比谷線 [銀座駅] 徒歩5分
+          /東京メトロ日比谷線 [東銀座駅]徒歩5分
+          /都営浅草線 [東銀座駅] 徒歩5分</dd>
       </div>
       
       <div class="flex flex-col sm:flex-row sm:items-start gap-2 
