--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </section>
 
 <div class="max-w-screen-lg w-full mx-auto px-4">
-  <img src="obi.png" alt="帯画像" class="w-full object-cover" />
+  <img src="IMG_0091.JPG" alt="帯画像" class="w-full object-cover" />
 </div>
 
 
