--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
   <div class="grid md:grid-cols-[1fr_auto_1fr] gap-6 items-center bg-gray-50 p-6 rounded-lg shadow">
   <div class="flex items-center gap-4">
-    <img src="原田彩子.png" alt="原田 彩子" class="w-24 h-24 rounded-full object-cover">
+    <img src="原2.jpeg" alt="原田 彩子" class="w-24 h-24 rounded-full object-cover">
     <div>
       <p class="text-lg md:text-xl font-bold text-[var(--blue-main)] mb-1">
         原田 彩子
