--- a/index.html
+++ b/index.html
@@ -143,11 +143,12 @@
     <img src="原2.jpeg" alt="原田 彩子" class="w-24 h-24 rounded-full object-cover">
     <div>
       <p class="text-lg md:text-xl font-bold text-[var(--blue-main)] mb-1">
-        原田 彩子
+        原 久美子
       </p>
       <p class="text-sm md:text-base text-gray-500 leading-tight">
-        アイスタイルデータコンサルティング株式会社<br>
-        @cosmeリサーチプランナー
+        株式会社アイスタイル ブランド体験ユニット<br>
+        プラットフォームビジネス推進本部 BtoBマーケティング部<br>
+＠cosme for BUSINESS マネージャー
       </p>
     </div>
   </div>
@@ -164,8 +165,8 @@
   </div>
 
   <div class="md:col-span-3 text-sm md:text-base text-gray-500 leading-tight mt-6">
-    ＠cosmeを運営するアイスタイルにて、美容市場における生活者の深い理解を目指し、＠cosme会員組織を活用したマーケティングリサーチの実施、および＠cosmeに蓄積されたクチコミをもとにユーザー特性や商品特性の調査分析を行う。<br><br>
-    読売新聞、日経MJ、日経TRENDY、光文社「bis」等、新聞・雑誌媒体への協力・出演や、宣伝会議等のセミナー講演、化粧品メーカーのPRイベント登壇、ラジオ出演等、多岐にわたって生活者の消費傾向・トレンド情報の発信に携わる。
+    2018年アイスタイル入社後、大手企業や百貨店･外資企業様へ、@cosmeのメディア･EC･店舗を活用した戦略立案・プロモーション設計を4年経験した後、@cosme for BUSINESSへ異動。
+サービス開発/営業推進の経験も経て、現在はマネージャーとして化粧品業界/＠cosmeに関するコンテンツ創出や設計に従事。<br><br>
   </div>
 </div>
 
