--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
         </div>
 
         <div class="flex items-center gap-4">
-          <img src="アイスタイル.png" alt="アイスタイル"
+          <img src="istyle_Brandmark_a_CMYK.png" alt="アイスタイル"
                class="w-24 h-24 rounded-full object-cover">
           <div>
             <p class="text-lg md:text-xl font-bold text-[var(--blue-main)] mb-1">
