--- a/index.html
+++ b/index.html
@@ -270,7 +270,8 @@
         <div>
           <p class="text-xl font-bold mb-1">Session1｜<br>
             「化粧品市場の現状と今後の成長性」</p>
-          <p class="text-sm text-gray-600">アイスタイルデータコンサルティング株式会社 @cosmeリサーチプランナー 原田 彩子</p>
+          <p class="text-sm text-gray-600">アイスタイルデータコンサルティング株式会社 @cosmeリサーチプランナー 原田 彩子<br>
+          なぜ今、化粧品市場が熱いのか。業界の最前線を走るアイスタイル様が、膨大なデータを基に市場のリアルな今と、未来の可能性について解説。新規参入を検討する上で欠かせない、マクロな視点と成功のヒントを得ることができます。</p>
         </div>
       </div>
 
@@ -281,7 +282,9 @@
         <div>
           <p class="text-xl font-bold mb-1">Session2｜<br>
             「新規参入をうまくいかせるためのブランド作りとマーケティング戦略」</p>
-          <p class="text-sm text-gray-600">株式会社MD 代表取締役 石井 賢介</p>
+          <p class="text-sm text-gray-600">株式会社MD 代表取締役 石井 賢介<br>
+          数々の化粧品ブランドを成功に導いてきたベイコスメティックスが、新規参入企業が陥りがちな失敗と、それを乗り越えヒットを生み出すための具体的なブランド戦略、販売促進手法を徹底解説します。
+          </p>
         </div>
       </div>
 
@@ -292,7 +295,9 @@
         <div>
           <p class="text-xl font-bold mb-1">Session3｜<br>
             「なぜ新規事業で化粧品事業を選んだのか 各社の成功事例の共有」</p>
-          <p class="text-sm text-gray-600">ネオマーケティング × アイスタイル × ベイコスメティックス</p>
+          <p class="text-sm text-gray-600">ネオマーケティング × アイスタイル × ベイコスメティックス<br>
+          実際に異業種から化粧品事業に参入し、成功を収めている各社によるパネルディスカッション。どのような課題があり、どう乗り越えたのか。リアルな成功事例を共有し、明日から実践できる事業戦略のヒントを語り尽くします。
+          </p>
         </div>
       </div>
 
