--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
         <div>
           <p class="text-xl font-bold mb-1">Session1｜<br>
             「化粧品市場の現状と今後の成長性」</p>
-          <p class="text-sm text-gray-600">アイスタイルデータコンサルティング株式会社 @cosmeリサーチプランナー 原田 彩子<br>
+          <p class="text-sm text-gray-600"> 株式会社アイスタイル ブランド体験ユニット、プラットフォームビジネス推進本部 BtoBマーケティング部、＠cosme for BUSINESS マネージャー、原　久美子<br>
           なぜ今、化粧品市場が熱いのか。業界の最前線を走るアイスタイル様が、膨大なデータを基に市場のリアルな今と、未来の可能性について解説。新規参入を検討する上で欠かせない、マクロな視点と成功のヒントを得ることができます。</p>
         </div>
       </div>
