--- a/index.html
+++ b/index.html
@@ -207,33 +207,42 @@
         各社の成功事例から学ぶ参入のリアル
       </p>
 
-      <div class="grid md:grid-cols-[1fr_auto_1fr] gap-6 items-center bg-gray-50 p-6 rounded-lg shadow">
-        <div class="flex items-center gap-4">
-          <img src="ネオマーケティング.png" alt="ネオマーケティング"
-               class="w-24 h-24 rounded-full object-cover">
-          <div>
-          <p class="text-lg md:text-xl font-bold text-[var(--blue-main)] mb-1">
-            ネオマーケティング
-          </p>
-          <p class="text-sm md:text-base text-gray-500 leading-tight">
-            
-            </p>
-          </div>
-        </div>
+<div class="grid md:grid-cols-[1fr_auto_1fr_auto_1fr] gap-6 items-center bg-gray-50 p-6 rounded-lg shadow">
+  <div class="text-center">
+    <p class="text-lg md:text-xl font-bold text-[var(--blue-main)] mb-1">
+      ネオマーケティング
+    </p>
+    <p class="text-sm md:text-base text-gray-500 leading-tight">
+      &nbsp;
+    </p>
+  </div>
 
-        <div class="flex justify-center text-2xl font-bold text-[var(--blue-main)]">
-          ×
-        </div>
+  <div class="flex justify-center text-2xl font-bold text-[var(--blue-main)]">
+    ×
+  </div>
 
-        <div class="flex items-center gap-4">
-          <img src="istyle_Brandmark_a_CMYK.png" alt="アイスタイル"
-               class="w-24 h-24 rounded-full object-cover">
-          <div>
-            <p class="text-lg md:text-xl font-bold text-[var(--blue-main)] mb-1">
-              アイスタイル
-              </p>
-              <p class="text-sm md:text-base text-gray-500 leading-tight">
-            
+  <div class="text-center">
+    <p class="text-lg md:text-xl font-bold text-[var(--blue-main)] mb-1">
+      アイスタイル
+    </p>
+    <p class="text-sm md:text-base text-gray-500 leading-tight">
+      &nbsp;
+    </p>
+  </div>
+
+  <div class="flex justify-center text-2xl font-bold text-[var(--blue-main)]">
+    ×
+  </div>
+
+  <div class="text-center">
+    <p class="text-lg md:text-xl font-bold text-[var(--blue-main)] mb-1">
+      ベイコスメティックス
+    </p>
+    <p class="text-sm md:text-base text-gray-500 leading-tight">
+      &nbsp;
+    </p>
+  </div>
+</div>
             </p>
           </div>
         </div>
