--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 <div class="grid md:grid-cols-[1fr_auto_1fr_auto_1fr] gap-6 items-center bg-gray-50 p-6 rounded-lg shadow">
   <div>
     <div class="flex items-center gap-4">
-      <img src="担当者の顔写真.png" alt="ネオマーケティング 担当者"
+      <img src="Screenshot 2025-09-29 at 18.05.14.png" alt="ネオマーケティング 担当者"
            class="w-24 h-24 rounded-full object-cover flex-shrink-0">
       <div>
         <p class="text-lg md:text-xl font-bold text-[var(--blue-main)] mb-1">
