--- a/index.html
+++ b/index.html
@@ -97,15 +97,9 @@
       <div class="flex flex-col sm:flex-row sm:items-start gap-2 
                   border-b border-white/40 pb-6 mb-6">
         <dt class="font-bold shrink-0 w-36">アクセス</dt>
-        <dd> JR山手線 新橋駅 徒歩7分<br>
-            東京メトロ銀座線 新橋駅 徒歩7分<br>
-            JR京浜東北線 新橋駅 徒歩7分<br>
-            都営浅草線 新橋駅 徒歩7分<br>
-            東京メトロ銀座線 銀座駅 徒歩5分<br>
-            東京メトロ丸ノ内線 銀座駅 徒歩5分<br>
-            東京メトロ日比谷線 銀座駅 徒歩5分<br>
-            東京メトロ日比谷線 東銀座駅 徒歩5分<br>
-            都営浅草線 東銀座駅 徒歩5分</dd>
+        <dd> 新橋駅 徒歩7分<br>
+             銀座駅 徒歩5分<br>
+             東銀座駅 徒歩5分</dd>
       </div>
       
       <div class="flex flex-col sm:flex-row sm:items-start gap-2 
@@ -390,12 +384,7 @@
   </div>
 </section>
 
-  
-<section id="present" class="bg-white py-24 px-6 text-center">
-  <h2 class="text-4xl font-extrabold italic mb-2">PRESENT</h2>
-  <p class="text-sm text-gray-600 mb-6">ー来場者限定特典ー</p>
-  <p class="text-xl font-semibold">Coming Soon</p>
-</section>
+
 
 
   
