--- a/index.html
+++ b/index.html
@@ -352,15 +352,9 @@
         <div>
           <p class="font-bold">電車からのアクセス</p>
           <p class="mt-1">
-            JR山手線 新橋駅 徒歩7分<br>
-            東京メトロ銀座線 新橋駅 徒歩7分<br>
-            JR京浜東北線 新橋駅 徒歩7分<br>
-            都営浅草線 新橋駅 徒歩7分<br>
-            東京メトロ銀座線 銀座駅 徒歩5分<br>
-            東京メトロ丸ノ内線 銀座駅 徒歩5分<br>
-            東京メトロ日比谷線 銀座駅 徒歩5分<br>
-            東京メトロ日比谷線 東銀座駅 徒歩5分<br>
-            都営浅草線 東銀座駅 徒歩5分
+              新橋駅 徒歩7分<br>
+             銀座駅 徒歩5分<br>
+             東銀座駅 徒歩5分
           </p>
         </div>
       </div>
