--- a/index.html
+++ b/index.html
@@ -201,23 +201,27 @@
         各社の成功事例から学ぶ参入のリアル
       </p>
 
-<div class="grid md:grid-cols-[1fr_auto_1fr_auto_1fr] gap-6 items-center bg-gray-50 p-6 rounded-lg shadow">
-  <div>
-    <div class="flex items-center gap-4">
-      <img src="Screenshot 2025-09-29 at 18.05.14.png" alt="ネオマーケティング 担当者"
-           class="w-24 h-24 rounded-full object-cover flex-shrink-0">
-      <div>
-        <p class="text-lg md:text-xl font-bold text-[var(--blue-main)] mb-1">
-          ネオマーケティング様
-        </p>
-        <p class="font-bold text-gray-800">中村　知佳</p>
-        <p class="text-sm text-gray-600">モデレーター</p>
-        <p class="text-xs text-gray-500 mt-2 leading-snug">
-          リサーチ歴10年。<br>
+                <div class="bg-gray-50 p-6 rounded-lg shadow flex items-center gap-4">
+        <img src="Screenshot 2025-09-29 at 18.05.14.png.png" alt="石井賢介"
+             class="w-24 h-24 rounded-full object-cover">
+        <div>
+          <p class="text-lg md:text-xl font-bold text-[var(--blue-main)] mb-1">
+            中村　知佳
+          </p>
+          <p class="text-sm md:text-base text-gray-500 leading-tight">
+            ネオマーケティング<br>
+            モデレーター
+            <br>
+            <br>
+            1          リサーチ歴10年。<br>
 コンサルタントとして様々な業界のマーケティング課題解決の支援を行った経験を活かし、現在は定性調査の企画～分析部分の業務に従事している。<br>
 化粧品や健康食品などの女性向けの商材をはじめ、金融業界の案件を得意としている。<br>
 現在自社開発のヘアケアブランド「imk」のブランドマネージャーも兼任。<br>
 社外広報/ラジオレポーターの経験あり。司会業でも活動中。<br>
+          </p>
+        </div>
+      </div>
+    </div>
         </p>
       </div>
     </div>
