--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   
 <section id="kv" class="relative pt-20">
   <div class="max-w-screen-lg w-full mx-auto px-4">
-    <img src="IMG_0091.JPG" alt="KV Banner" class="w-full h-auto object-contain" />
+    <img src="S__62676997_0.jpg" alt="KV Banner" class="w-full h-auto object-contain" />
   </div>
 </section>
 
