--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
     <h2 class="text-5xl font-extrabold italic text-[var(--blue)] mb-4" style="color: #0066B8;">NEXT COSMETIC EXPO 2025</h2>
     <p class="flex items-center justify-center text-sm text-gray-600 mb-10"><span class="w-12 h-px bg-gray-400 mr-3"></span>異業種からの挑戦を成功に導く！<br>化粧品業界 新規参入セミナー<span class="w-12 h-px bg-gray-400 ml-3"></span></p>
     <p class="text-lg leading-relaxed font-bold mb-6 max-w-4xl mx-auto">新たな事業の柱を模索されている企業様へ。<br>なぜ今、多くの企業が化粧品事業への新規参入に注目しているのか、その理由をご存知ですか？</p>
-    <p class="text-base leading-relaxed max-w-4xl mx-auto">本イベントは、市場の最新動向を牽引するアイスタイル様、新たに新規参入したネオマーケティング様、親会社であるMD代表石井賢介氏をお招きし、主催のベイコスメティックスと共に、「なぜ、化粧品事業へ新規参入をしたのか」「圧倒的なヒット商品を生み出すためのブランド戦略・マーケティング手法とは何か」について、各社の成功事例を交えながら、その戦略のすべてをこの場限りでお話しいただく、完全オフラインの特別カンファレンスです。<br>貴社の新たな事業の柱となり得る、化粧品ビジネス成功への道筋を具体的に描くまたとない機会です。ぜひ、ご参加ください。</span> </p>
+    <p class="text-base leading-relaxed max-w-4xl mx-auto">本イベントは、ベイコスメティックスが主催する完全オフラインの特別カンファレンスです。
+登壇者には、市場の最新動向を牽引するアイスタイル様、新たに参入したネオマーケティング様、そして弊社親会社MDの代表 石井賢介をお迎えし、
+「なぜ化粧品事業へ新規参入したのか」「圧倒的なヒット商品を生み出すブランド戦略・マーケティング手法とは何か」について、各社の成功事例を交えながら、その戦略のすべてをこの場限りでお話しいただきます。<br>貴社の新たな事業の柱となり得る、化粧品ビジネス成功への道筋を具体的に描くまたとない機会です。ぜひ、ご参加ください。</span> </p>
   </div>
 </section>
   
