--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
           <p class="text-xl font-bold mb-1">Session1｜<br>
             「化粧品市場の現状と今後の成長性」</p>
           <p class="text-sm text-gray-600"> 株式会社アイスタイル ブランド体験ユニット、プラットフォームビジネス推進本部 BtoBマーケティング部、＠cosme for BUSINESS マネージャー、原　久美子<br>
-          なぜ今、化粧品市場が熱いのか。業界の最前線を走るアイスタイル様が、膨大なデータを基に市場のリアルな今と、未来の可能性について解説。新規参入を検討する上で欠かせない、マクロな視点と成功のヒントを得ることができます。</p>
+          なぜ今、化粧品市場が熱いのか。業界の最前線を走るアイスタイル様が、化粧品市場のリアルな今と未来の可能性について解説。新規参入を検討する上で気をつけること、成功のヒントを得ることが期待できます。</p>
         </div>
       </div>
 
