--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
       <div>
        <a href="https://maps.app.goo.gl/gwvCicjDF7enTgUG7" target="_blank" rel="noopener">
           <iframe
-            src="https://www.google.co.jp/maps/place/%E9%8A%80%E5%BA%A7%E3%83%A6%E3%83%8B%E3%83%BC%E3%82%AF%E8%B2%B8%E4%BC%9A%E8%AD%B0%E5%AE%A47%E4%B8%81%E7%9B%AE%E5%BA%97/@35.6674967,139.7611529,17z/data=!3m2!4b1!5s0x60188be7eb9675f7:0xac7df4d5fa7b87ba!4m6!3m5!1s0x60188bcf72548313:0xf695cb61612e635!8m2!3d35.6674967!4d139.7637278!16s%2Fg%2F11sn_59x3q?entry=ttu&g_ep=EgoyMDI1MDkyOS4wIKXMDSoASAFQAw%3D%3D"
+            src="https://maps.app.goo.gl/bAcFGRPyxnkGyMHs8"
             width="100%" height="320" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
         </a>
