--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
       </div>
 
 <div>
-  <a href="https://maps.app.goo.gl/Vq5BjszaxAKMribL7" target="_blank" rel="noopener">
+  <a href="https://maps.app.goo.gl/ZCzwUAxzUfLSFWEu9" target="_blank" rel="noopener">
     <iframe
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3240.3791138727085!2d139.7605943754589!3d35.66753008019679!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188bb1b010f09d%3A0x17e53dfe1dfb8b4b!2z44CSMTA0LTAwNjEg5p2x5Lqs6YO95Lit5aSu5Yy65Y2X5Yy65ZCN5Y-w77yT5LiB55uu77yR77yS4oiS77yS77yW!5e0!3m2!1sja!2sjp!4v1734700000000!5m2!1sja!2sjp"
       width="100%"
