--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
 <div>
   <a href="https://maps.app.goo.gl/ZCzwUAxzUfLSFWEu9" target="_blank" rel="noopener">
     <iframe
-      src="https://www.google.com/maps/place/%E3%80%92104-0061+%E6%9D%B1%E4%BA%AC%E9%83%BD%E4%B8%AD%E5%A4%AE%E5%8C%BA%E9%8A%80%E5%BA%A7%EF%BC%97%E4%B8%81%E7%9B%AE%EF%BC%91%EF%BC%93%E2%88%92%EF%BC%91%EF%BC%95+%E8%8F%8A%E5%9C%B0%E3%83%93%E3%83%AB+6F/@35.6676202,139.7611491,17z/data=!3m1!4b1!4m6!3m5!1s0x60188be7eb980127:0x2b9b3ddae7400d8a!8m2!3d35.6676202!4d139.7637294!16s%2Fg%2F11rstmrn1d?hl=ja&entry=ttu&g_ep=EgoyMDI1MTAxNC4wIKXMDSoASAFQAw%3D%3D"
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3240.3791138727085!2d139.7605943754589!3d35.66753008019679!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188bb1b010f09d%3A0x17e53dfe1dfb8b4b!2z44CSMTA0LTAwNjEg5p2x5Lqs6YO95Lit5aSu5Yy65Y2X5Yy65ZCN5Y-w77yT5LiB55uu77yR77yS4oiS77yS77yW!5e0!3m2!1sja!2sjp!4v1734700000000!5m2!1sja!2sjp"
       width="100%"
       height="320"
       style="border:0;"
